fix(AdminPanel): fix table overflow

--- a/app/components/AdminPanel/ContentContainer/style.less
+++ b/app/components/AdminPanel/ContentContainer/style.less
@@ -25,6 +25,10 @@
     td {
       overflow: visible !important;
     }
+
+    td:first-child {
+      overflow: hidden !important;
+    }
   }
 
   @media only screen and (max-width: 1040px) {
